# sample-app

./: .gitignore  README.md  pyproject.toml
src/sample_app/: main.py  version.py
